@@ -4,7 +4,7 @@
     <parent>
         <groupId>de.cismet.cids.custom.wuppertal.distribution</groupId>
         <artifactId>wuppertal-distribution</artifactId>
-        <version>24.09.1</version>
+        <version>24.09.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
@@ -101,7 +101,6 @@
                                 <jvmarg>-Djnlp.userDomain=WUNDA_BLAU</jvmarg>
                                 <jvmarg>-Xms512M</jvmarg>
                                 <jvmarg>-Xmx1024M</jvmarg>
-                                <jvmarg>-XX:MaxPermSize=128m</jvmarg>
                             </jvmargs>
                             <ui>
                                 <name>${launcher.name} v${project.version}</name>
